0031873: Samples, Qt OCCT Overview sample - Problems of compilation and launch in 32 bit mode on Windows